examples/test/testpolicy3166.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3166
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key11: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value2
          key41: value17
          key28: value28
      podSelector:
        matchLabels:
          key49: value43
          key8: value47
